mobile thoughts alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ p {
 
 .link {
     position: relative;
-    height: 100px;
+    /*height: 100px;*/
     margin-bottom: 20px;
 }
 
@@ -191,14 +191,15 @@ p {
 }
 
 .link-image {
+    position: absolute;
     width: 100px;
     height: 100px;
     float: left;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .thought-link-content {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 120px;
+    width: calc(100% - 120px);
+    float: right;
 }
